feat: detailed_diagnostic() in timeseries.ipynb

--- a/notebooks/timeseries.ipynb
+++ b/notebooks/timeseries.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2e991594",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\zlib1.dll...\n",
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\abseil_dll.dll...\n",
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\utf8_validity.dll...\n",
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\re2.dll...\n",
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\libprotobuf.dll...\n",
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\highs.dll...\n",
+      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\ortools.dll...\n",
+      "\n",
+      "Created External Grid!\n",
+      "Created Transformer!\n",
+      "Created Shunt!\n",
+      "Created 117 Buses!\n"
+     ]
+    }
+   ],
    "source": [
     "import os, math, sys\n",
     "import pandas as pd\n",
@@ -83,37 +102,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7e763415",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "This pandapower network includes the following parameter tables:\n",
-       "   - bus (117 elements)\n",
-       "   - asymmetric_load (55 elements)\n",
-       "   - shunt (1 element)\n",
-       "   - ext_grid (1 element)\n",
-       "   - line (115 elements)\n",
-       "   - trafo (1 element)\n",
-       " and the following results tables:\n",
-       "   - res_bus_3ph (117 elements)\n",
-       "   - res_line_3ph (115 elements)\n",
-       "   - res_trafo_3ph (1 element)\n",
-       "   - res_ext_grid_3ph (1 element)\n",
-       "   - res_shunt_3ph (1 element)\n",
-       "   - res_asymmetric_load_3ph (55 elements)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'Python 3.12.8' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "net = from_json(os.path.join(main_dir, 'json_networks', 'full_load_network.json'))\n",
     "net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e72a4502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandapower.diagnostic as ppdiag\n",
+    "\n",
+    "def detailed_diagnostic(net, verbose=True):\n",
+    "    print(\">> Iniciando diagnóstico da rede...\\n\")\n",
+    "\n",
+    "    # 1. Diagnóstico do pandapower\n",
+    "    diag_results = ppdiag.diagnose(net)\n",
+    "\n",
+    "    if verbose:\n",
+    "        for key, issues in diag_results.items():\n",
+    "            if issues:\n",
+    "                print(f\"[!] Problema detectado em '{key}': {issues}\")\n",
+    "    \n",
+    "    # 2. Barras desconectadas\n",
+    "    disconnected_buses = diag_results.get(\"disconnected_buses\", [])\n",
+    "    if disconnected_buses:\n",
+    "        print(f\"⚠️  {len(disconnected_buses)} barras desconectadas: {disconnected_buses}\")\n",
+    "\n",
+    "    # 3. Linhas ou trafos com impedância zero\n",
+    "    zero_impedance_lines = net.line[(net.line.r_ohm_per_km == 0) & (net.line.x_ohm_per_km == 0)]\n",
+    "    if not zero_impedance_lines.empty:\n",
+    "        print(f\"⚠️  Linhas com impedância zero:\\n{zero_impedance_lines}\")\n",
+    "\n",
+    "    zero_impedance_trafo = net.trafo_3ph[net.trafo_3ph.vn_hv_kv == 0]\n",
+    "    if not zero_impedance_trafo.empty:\n",
+    "        print(f\"⚠️  Transformadores com tensão nominal zero:\\n{zero_impedance_trafo}\")\n",
+    "\n",
+    "    # 4. Verificação de perfis de controle\n",
+    "    if \"controller\" in net and not net.controller.empty:\n",
+    "        nan_profiles = []\n",
+    "        for ctrl in net.controller.itertuples():\n",
+    "            ds = ctrl.data_source\n",
+    "            pname = ctrl.profile_name\n",
+    "            if isinstance(pname, list):\n",
+    "                for name in pname:\n",
+    "                    if name not in ds.data or ds.data[name].isnull().all():\n",
+    "                        nan_profiles.append(name)\n",
+    "            elif pname not in ds.data or ds.data[pname].isnull().all():\n",
+    "                nan_profiles.append(pname)\n",
+    "        if nan_profiles:\n",
+    "            print(f\"⚠️  Perfis inválidos ou NaN detectados: {nan_profiles}\")\n",
+    "    else:\n",
+    "        print(\"⚠️  Nenhum controlador foi encontrado na rede.\")\n",
+    "\n",
+    "    # 5. Tensões iniciais muito baixas\n",
+    "    if hasattr(net, \"res_bus_3ph\") and not net.res_bus_3ph.empty:\n",
+    "        low_voltages = net.res_bus_3ph[\n",
+    "            (net.res_bus_3ph.vm_a_pu < 0.7) |\n",
+    "            (net.res_bus_3ph.vm_b_pu < 0.7) |\n",
+    "            (net.res_bus_3ph.vm_c_pu < 0.7)\n",
+    "        ]\n",
+    "        if not low_voltages.empty:\n",
+    "            print(f\"⚠️  Tensões iniciais baixas detectadas:\\n{low_voltages}\")\n",
+    "\n",
+    "    print(\"\\n>> Diagnóstico completo.\")\n",
+    "    return diag_results\n",
+    "\n",
+    "detailed_diagnostic(net)"
    ]
   },
   {
