fix: detailed_diagnostic()

--- a/notebooks/timeseries.ipynb
+++ b/notebooks/timeseries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e991594",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,22 @@
       "Created External Grid!\n",
       "Created Transformer!\n",
       "Created Shunt!\n",
-      "Created 117 Buses!\n"
+      "Created 117 Buses!\n",
+      "Created 115 Lines!\n",
+      "\n",
+      "Debugging successful!\n",
+      "This pandapower network includes the following parameter tables:\n",
+      "   - bus (117 elements)\n",
+      "   - shunt (1 element)\n",
+      "   - ext_grid (1 element)\n",
+      "   - line (115 elements)\n",
+      "   - trafo (1 element)\n",
+      " and the following results tables:\n",
+      "   - res_bus_3ph (117 elements)\n",
+      "   - res_line_3ph (115 elements)\n",
+      "   - res_trafo_3ph (1 element)\n",
+      "   - res_ext_grid_3ph (1 element)\n",
+      "   - res_shunt_3ph (1 element)\n"
      ]
     }
    ],
@@ -102,19 +117,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7e763415",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'Python 3.12.8' due to a timeout waiting for the ports to get used. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "This pandapower network includes the following parameter tables:\n",
+       "   - bus (117 elements)\n",
+       "   - asymmetric_load (55 elements)\n",
+       "   - shunt (1 element)\n",
+       "   - ext_grid (1 element)\n",
+       "   - line (115 elements)\n",
+       "   - trafo (1 element)\n",
+       " and the following results tables:\n",
+       "   - res_bus_3ph (117 elements)\n",
+       "   - res_line_3ph (115 elements)\n",
+       "   - res_trafo_3ph (1 element)\n",
+       "   - res_ext_grid_3ph (1 element)\n",
+       "   - res_shunt_3ph (1 element)\n",
+       "   - res_asymmetric_load_3ph (55 elements)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,18 +152,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e72a4502",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> Iniciando diagnóstico da rede...\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "_____________ PANDAPOWER DIAGNOSTIC TOOL _____________ \n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "\n",
+      " --------\n",
+      "\n",
+      "_____________ END OF PANDAPOWER DIAGNOSTIC _____________ \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[!] Problema detectado em 'implausible_impedance_values': [{'line': [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 19, 21, 22, 23, 24, 25, 26, 29, 30, 31, 33, 35, 36, 37, 39, 41, 42, 43, 44, 45, 46, 47, 51, 54, 55, 56, 57, 58, 61, 63, 64, 65, 66, 67, 68, 69, 71, 72, 74, 76, 79, 80, 82, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 97, 98, 99, 101, 102, 103, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114]}]\n",
+      "⚠️  Nenhum controlador foi encontrado na rede.\n",
+      "\n",
+      ">> Diagnóstico completo.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'implausible_impedance_values': [{'line': [1,\n",
+       "    2,\n",
+       "    3,\n",
+       "    4,\n",
+       "    5,\n",
+       "    7,\n",
+       "    8,\n",
+       "    9,\n",
+       "    10,\n",
+       "    11,\n",
+       "    12,\n",
+       "    13,\n",
+       "    14,\n",
+       "    15,\n",
+       "    19,\n",
+       "    21,\n",
+       "    22,\n",
+       "    23,\n",
+       "    24,\n",
+       "    25,\n",
+       "    26,\n",
+       "    29,\n",
+       "    30,\n",
+       "    31,\n",
+       "    33,\n",
+       "    35,\n",
+       "    36,\n",
+       "    37,\n",
+       "    39,\n",
+       "    41,\n",
+       "    42,\n",
+       "    43,\n",
+       "    44,\n",
+       "    45,\n",
+       "    46,\n",
+       "    47,\n",
+       "    51,\n",
+       "    54,\n",
+       "    55,\n",
+       "    56,\n",
+       "    57,\n",
+       "    58,\n",
+       "    61,\n",
+       "    63,\n",
+       "    64,\n",
+       "    65,\n",
+       "    66,\n",
+       "    67,\n",
+       "    68,\n",
+       "    69,\n",
+       "    71,\n",
+       "    72,\n",
+       "    74,\n",
+       "    76,\n",
+       "    79,\n",
+       "    80,\n",
+       "    82,\n",
+       "    84,\n",
+       "    85,\n",
+       "    86,\n",
+       "    87,\n",
+       "    88,\n",
+       "    89,\n",
+       "    90,\n",
+       "    91,\n",
+       "    93,\n",
+       "    94,\n",
+       "    97,\n",
+       "    98,\n",
+       "    99,\n",
+       "    101,\n",
+       "    102,\n",
+       "    103,\n",
+       "    105,\n",
+       "    106,\n",
+       "    107,\n",
+       "    108,\n",
+       "    109,\n",
+       "    110,\n",
+       "    111,\n",
+       "    112,\n",
+       "    113,\n",
+       "    114]}]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandapower.diagnostic as ppdiag\n",
+    "# import pandapower.diagnostic as ppdiag\n",
     "\n",
     "def detailed_diagnostic(net, verbose=True):\n",
     "    print(\">> Iniciando diagnóstico da rede...\\n\")\n",
     "\n",
     "    # 1. Diagnóstico do pandapower\n",
-    "    diag_results = ppdiag.diagnose(net)\n",
+    "    diag_results = pp.diagnostic(net)\n",
     "\n",
     "    if verbose:\n",
     "        for key, issues in diag_results.items():\n",
@@ -152,7 +344,7 @@
     "    if not zero_impedance_lines.empty:\n",
     "        print(f\"⚠️  Linhas com impedância zero:\\n{zero_impedance_lines}\")\n",
     "\n",
-    "    zero_impedance_trafo = net.trafo_3ph[net.trafo_3ph.vn_hv_kv == 0]\n",
+    "    zero_impedance_trafo = net.trafo[net.trafo.vn_hv_kv == 0]\n",
     "    if not zero_impedance_trafo.empty:\n",
     "        print(f\"⚠️  Transformadores com tensão nominal zero:\\n{zero_impedance_trafo}\")\n",
     "\n",
